<resources>
    <string name="app_name">Kick Connect</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name…</string>
    <string name="email">Email</string>
    <string name="email_">Email…</string>
    <string name="password">Password</string>
    <string name="password_">Password…</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_a_account_sign_in">Already Have a Account?Sign In</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="add_blogs">Add Blogs</string>
    <string name="chat_list">ChatList</string>
    <string name="profile">Profile</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="need_new_account_sign_up_here">Need new Account?Sign Up Here</string>
    <string name="edit_profile">Edit Profile Data</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password</string>
    <string name="liked">Scored</string>
    <string name="like">Score</string>
    <string name="share">Share</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload">Upload</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="bayern_munchen">Bayern Munchen</string>
    <string name="like_photo">Like photo</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="kick">Kick</string>
    <string name="change_wallpaper">Change Wallpaper</string>
</resources>