<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/thirdColor"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_photo"
        android:layout_marginStart="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bayern_munchen"
            android:textColor="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/radioMiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/real_madrid"
            android:textColor="@color/colorPrimary"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelPrefix"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/thirdColor"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/buttonSelectPrefix"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/thirdColor"
            android:text="@string/done"/>
    </LinearLayout>
</LinearLayout>