<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/wallpaper2">

    <include
        android:id="@+id/login_progress_bar"
        android:visibility="gone"
        layout="@layout/progressbar" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="437dp"
        android:background="@drawable/reg_log_background"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit"
            android:inputType="textPassword"
            android:padding="8dp" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/needs_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/need_new_account_sign_up_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
