<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity"
    android:background="@drawable/wallpaper">

    <include
        android:id="@+id/registration_progress_bar"
        android:visibility="gone"
        layout="@layout/progressbar" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="437dp"
        android:background="@drawable/reg_log_background"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit"
            android:inputType="text"
            android:padding="8dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:background="@drawable/edit_text_rounded_corner"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/already_have_a_account_sign_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
