<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/secondaryColor"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:textAlignment="center"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="@color/thirdColor"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/thirdColor"
        android:background="@drawable/edit_text_rounded_corner"
        android:layout_marginBottom="10dp"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/oldpasslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="@color/thirdColor"
        android:layout_marginBottom="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/newpasslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updatepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="@color/thirdColor"
        android:padding="10dp"
        android:text="@string/update" />

</LinearLayout>
